--- a/js/src/views/ParityBar/parityBar.css
+++ b/js/src/views/ParityBar/parityBar.css
@@ -18,6 +18,7 @@
 .account {
   display: flex;
   flex: 1;
+  overflow: hidden;
   position: relative;
 
   .accountOverlay {
@@ -109,6 +110,7 @@
   display: flex;
   flex-direction: column;
   max-height: 50vh;
+  max-width: calc(100vw - 1em);
 
   .content {
     flex: 1;
@@ -116,7 +118,6 @@
     overflow-x: hidden;
     display: flex;
     background: rgba(0, 0, 0, 0.8);
-    min-height: 16em;
   }
 }
 
